# rs-todo

./: .env.example  Cargo.toml  README.md  api.sh  todo.json
src/: lib.rs  main.rs
src/app/: services.rs
src/domain/: error.rs  id.rs  mod.rs  models.rs  repositories.rs
src/infra/: in_memory_repository.rs  mod.rs
src/interfaces/: config.rs  ext.rs  extractors.rs  handlers.rs  mod.rs
