[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-utils = "3.0.1"
actix-web = "4.10.2"
async-trait = "0.1.88"
dotenv = "0.15.0"
env_logger = "0.11.8"
envconfig = "0.11.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
